--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 SERVER_VERSION=1
 SERVER_PORT_HTTP=8080
 
-LOGGER_MOD=debug
+LOGGER_MOD=production
 
 POSTGRES_DB=test_db
 POSTGRES_PASSWORD=123
@@ -10,5 +10,5 @@ POSTGRES_USER=ilya
 POSTGRES_PORT=4545
 POSTGRES_HOST=localhost
 
-POSTGRES_MIN_CONN=25
-POSTGRES_MAX_CONN=50
+POSTGRES_MIN_CONN=20
+POSTGRES_MAX_CONN=80
