--- a/config.env
+++ b/config.env
@@ -1,14 +1,21 @@
-SERVER_VERSION=1
+SERVER_VERSION=2
 SERVER_PORT_HTTP=8080
 
 LOGGER_MOD=production
 
+
 POSTGRES_DB=test_db
 POSTGRES_PASSWORD=123
 POSTGRES_USER=ilya
+POSTGRES_VERSION=17.0
 
 POSTGRES_PORT=4545
 POSTGRES_HOST=localhost
 
 POSTGRES_MIN_CONN=20
 POSTGRES_MAX_CONN=80
+
+
+REDIS_PORT=6370
+REDIS_HOST=localhost
+REDIS_VERSION=alpine3.19
