--- a/config.env
+++ b/config.env
@@ -4,9 +4,9 @@ SERVER_PORT_HTTP=8080
 LOGGER_MOD=production
 
 
-POSTGRES_DB=test_db
-POSTGRES_PASSWORD=123
-POSTGRES_USER=ilya
+POSTGRES_DB=test
+POSTGRES_PASSWORD=test
+POSTGRES_USER=test
 POSTGRES_VERSION=17.0
 
 POSTGRES_PORT=4545
