--- a/config.env
+++ b/config.env
@@ -19,3 +19,24 @@ POSTGRES_MAX_CONN=80
 REDIS_PORT=6370
 REDIS_HOST=localhost
 REDIS_VERSION=alpine3.19
+
+KAFKA_LOCAL_HOST=kafka
+KAFKA_LOCAL_PORT=9093
+
+
+ZOOKEEPER_VERSION=latest
+ZOOKEEPER_SERVER_ID=1
+ZOOKEEPER_CLIENT_PORT=2181
+ZOOKEEPER_TICK_TIME=2000
+
+
+KAFKA_VERSION=latest
+KAFKA_BROKER_ID=1
+KAFKA_AUTO_CREATE_TOPICS_ENABLE='true'
+KAFKA_BROKER_ID=1
+KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092,INTERNAL://kafka:9093
+KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://192.168.0.2:19092,INTERNAL://kafka:9093 #заменить на ip сервера
+KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT
+KAFKA_INTER_BROKER_LISTENER_NAME=INTERNAL
+KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
