--- a/config.env
+++ b/config.env
@@ -2,6 +2,8 @@ SERVER_VERSION=1
 SERVER_PORT_HTTP=8080
 
 LOGGER_MOD=production
+LOGGER_KAFKA_TOPIC=log
+LOGGER_NAME=test-task-wallet
 
 
 POSTGRES_DB=test
@@ -30,7 +32,7 @@ ZOOKEEPER_CLIENT_PORT=2181
 ZOOKEEPER_TICK_TIME=2000
 
 
-KAFKA_VERSION=latest
+KAFKA_VERSION=7.3.1
 KAFKA_BROKER_ID=1
 KAFKA_AUTO_CREATE_TOPICS_ENABLE='true'
 KAFKA_BROKER_ID=1
